find_package(SFML 2 REQUIRED system window graphics network audio)
if(SFML_FOUND)
    add_executable(Particle Particle.cpp Particle.hpp)
    target_link_libraries(Particle Entity ${SFML_LIBRARIES} boost)
    target_include_directories(Particle PRIVATE ${PROJECT_SOURCE_DIR} ${SFML_INCLUDE_DIR})
endif()
